# vcr-showcase

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
tests/: test_dummy.py
tests/api/: conftest.py  test_status.py
tests/api/endpoints/: conftest.py
tests/api/endpoints/test_using_mock/: conftest.py  test_users.py  test_users_using_patch.py
tests/api/endpoints/test_using_requests_mock/: conftest.py  test_users.py
tests/api/endpoints/test_using_vcr/: conftest.py  helper.py  test_users.py
tests/api/endpoints/test_using_vcr/cassettes/test_users/: test_get_all_users.yaml  test_get_user_by_id.yaml  test_login.yaml
vcr_showcase/: main.py  settings.py
vcr_showcase/api/endpoints/: users.py
vcr_showcase/data/: __init__.py  data.json
vcr_showcase/models/: __init__.py  user.py
vcr_showcase/routers/: helper.py  users.py
