[build-system]
requires = ["setuptools"]

[project]
name = "vcr_showcase"
requires-python = ">= 3.12"
dynamic = ["version", "readme"]
authors = [{ name = 'Matias Gimenez', email = "matiasgimenez.dev@gmail.com" }]
description = "VCR Showcase"

######################
# coverage configuration #
######################
[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage Report"

######################
# ruff configuration #
######################

[tool.ruff]
fix = true
preview = true
exclude = [
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "_build",
  "buck-out",
  "build",
  "dist",
  "site-packages",
  "venv",
  "playground",
]

[tool.pylint]
disable = [
  "C0114",
  "W1514",
  "C0115",
  "C0116",
  "R0903",
  "E0401",
  "W0621",
  "R0801",
]
